// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`components/sidebar/sidebar_category should match snapshot 1`] = `
<div>
  <div
    data-rbd-droppable-context-id="0"
    data-rbd-droppable-id="sidebar-categories"
  >
    <div
      class="SidebarChannelGroup a11y__section"
      data-rbd-draggable-context-id="0"
      data-rbd-draggable-id="category1"
    >
      <div
        class=""
        data-rbd-droppable-context-id="0"
        data-rbd-droppable-id="category1"
      >
        <div
          class="SidebarChannelGroupHeader"
        >
          <button
            aria-expanded="true"
            aria-label="custom_category_1"
            class="SidebarChannelGroupHeader_groupButton"
          >
            <i
              class="icon icon-chevron-down"
            />
            <div
              aria-describedby="rbd-hidden-text-0-hidden-text-0"
              class="SidebarChannelGroupHeader_text"
              data-rbd-drag-handle-context-id="0"
              data-rbd-drag-handle-draggable-id="category1"
              draggable="false"
              tabindex="-1"
            >
              custom_category_1
            </div>
          </button>
          <div
            id="mock-category-menu"
          />
        </div>
        <div
          class="SidebarChannelGroup_content"
        >
          <ul
            class="NavGroupContent"
          >
            <li
              id="mock-sidebar-channel"
            />
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/sidebar/sidebar_category should match snapshot when collapsed 1`] = `
<div>
  <div
    data-rbd-droppable-context-id="2"
    data-rbd-droppable-id="sidebar-categories"
  >
    <div
      class="SidebarChannelGroup a11y__section isCollapsed"
      data-rbd-draggable-context-id="2"
      data-rbd-draggable-id="category1"
    >
      <div
        class=""
        data-rbd-droppable-context-id="2"
        data-rbd-droppable-id="category1"
      >
        <div
          class="SidebarChannelGroupHeader"
        >
          <button
            aria-expanded="false"
            aria-label="custom_category_1"
            class="SidebarChannelGroupHeader_groupButton"
          >
            <i
              class="icon icon-chevron-down icon-rotate-minus-90"
            />
            <div
              aria-describedby="rbd-hidden-text-2-hidden-text-9"
              class="SidebarChannelGroupHeader_text"
              data-rbd-drag-handle-context-id="2"
              data-rbd-drag-handle-draggable-id="category1"
              draggable="false"
              tabindex="-1"
            >
              custom_category_1
            </div>
          </button>
          <div
            id="mock-category-menu"
          />
        </div>
        <div
          class="SidebarChannelGroup_content"
        >
          <ul
            class="NavGroupContent"
          >
            <li
              id="mock-sidebar-channel"
            />
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/sidebar/sidebar_category should match snapshot when isNewCategory 1`] = `
<div>
  <div
    data-rbd-droppable-context-id="1"
    data-rbd-droppable-id="sidebar-categories"
  >
    <div
      class="SidebarChannelGroup a11y__section"
      data-rbd-draggable-context-id="1"
      data-rbd-draggable-id="category1"
    >
      <div
        class=""
        data-rbd-droppable-context-id="1"
        data-rbd-droppable-id="category1"
      >
        <div
          class="SidebarChannelGroupHeader"
        >
          <button
            aria-expanded="true"
            aria-label="custom_category_1"
            class="SidebarChannelGroupHeader_groupButton"
          >
            <i
              class="icon icon-chevron-down"
            />
            <div
              aria-describedby="rbd-hidden-text-1-hidden-text-4"
              class="SidebarChannelGroupHeader_text"
              data-rbd-drag-handle-context-id="1"
              data-rbd-drag-handle-draggable-id="category1"
              draggable="false"
              tabindex="-1"
            >
              custom_category_1
            </div>
          </button>
          <div
            class="SidebarCategory_newLabel"
          >
            new
          </div>
          <div
            id="mock-category-menu"
          />
        </div>
        <div
          class="SidebarChannelGroup_content"
        >
          <ul
            class="NavGroupContent"
          >
            <li
              class="SidebarChannel noFloat newChannelSpacer"
              data-rbd-draggable-context-id="1"
              data-rbd-draggable-id="NEW_CHANNEL_SPACER__category1"
              draggable="false"
              tabindex="-1"
            />
            <div
              class="SidebarCategory_newDropBox"
            >
              <div
                class="SidebarCategory_newDropBox-content"
              >
                <i
                  class="icon-hand-right"
                />
                <span
                  class="SidebarCategory_newDropBox-label"
                >
                  Drag channels here...
                </span>
              </div>
            </div>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/sidebar/sidebar_category should match snapshot when sorting is set to by recency 1`] = `
<div>
  <div
    data-rbd-droppable-context-id="5"
    data-rbd-droppable-id="sidebar-categories"
  >
    <div
      class="SidebarChannelGroup a11y__section"
      data-rbd-draggable-context-id="5"
      data-rbd-draggable-id="category1"
    >
      <div
        class=""
        data-rbd-droppable-context-id="5"
        data-rbd-droppable-id="category1"
      >
        <div
          class="SidebarChannelGroupHeader"
        >
          <button
            aria-expanded="true"
            aria-label="DIRECT MESSAGES"
            class="SidebarChannelGroupHeader_groupButton"
          >
            <i
              class="icon icon-chevron-down"
            />
            <div
              aria-describedby="rbd-hidden-text-5-hidden-text-19"
              class="SidebarChannelGroupHeader_text"
              data-rbd-drag-handle-context-id="5"
              data-rbd-drag-handle-draggable-id="category1"
              draggable="false"
              tabindex="-1"
            >
              DIRECT MESSAGES
            </div>
          </button>
          <div
            id="mock-sorting-menu"
          />
          <button
            aria-label="Write a direct message"
            class="SidebarChannelGroupHeader_addButton"
            id="newDirectMessageButton"
          >
            <i
              class="icon-plus"
            />
          </button>
        </div>
        <div
          class="SidebarChannelGroup_content"
        >
          <ul
            class="NavGroupContent"
          >
            <li
              id="mock-sidebar-channel"
            />
          </ul>
        </div>
      </div>
      <div
        id="mock-invite-members-button"
      />
    </div>
  </div>
</div>
`;

exports[`components/sidebar/sidebar_category should match snapshot when the category is DM and there are no DMs to display 1`] = `
<div>
  <div
    data-rbd-droppable-context-id="3"
    data-rbd-droppable-id="sidebar-categories"
  >
    <div
      class="SidebarChannelGroup a11y__section"
      data-rbd-draggable-context-id="3"
      data-rbd-draggable-id="category1"
    >
      <div
        class=""
        data-rbd-droppable-context-id="3"
        data-rbd-droppable-id="category1"
      >
        <div
          class="SidebarChannelGroupHeader"
        >
          <button
            aria-expanded="true"
            aria-label="DIRECT MESSAGES"
            class="SidebarChannelGroupHeader_groupButton"
          >
            <i
              class="icon icon-chevron-down hide-arrow"
            />
            <div
              aria-describedby="rbd-hidden-text-3-hidden-text-13"
              class="SidebarChannelGroupHeader_text"
              data-rbd-drag-handle-context-id="3"
              data-rbd-drag-handle-draggable-id="category1"
              draggable="false"
              tabindex="-1"
            >
              DIRECT MESSAGES
            </div>
          </button>
          <div
            id="mock-sorting-menu"
          />
          <button
            aria-label="Write a direct message"
            class="SidebarChannelGroupHeader_addButton"
            id="newDirectMessageButton"
          >
            <i
              class="icon-plus"
            />
          </button>
        </div>
        <div
          class="SidebarChannelGroup_content"
        >
          <ul
            class="NavGroupContent"
          />
        </div>
      </div>
      <div
        id="mock-invite-members-button"
      />
    </div>
  </div>
</div>
`;

exports[`components/sidebar/sidebar_category should match snapshot when there are no channels to display 1`] = `
<div>
  <div
    data-rbd-droppable-context-id="4"
    data-rbd-droppable-id="sidebar-categories"
  />
</div>
`;
